tdf#112337: Pivot table: empty / blank item is not imported from XLS

Change-Id: I7ed9e5cacdf6df80b2f100d040cbbeda33b085d3
Reviewed-on: https://gerrit.libreoffice.org/42181
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>